...

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="save">Salvar</string>


    <string name="cancel">Cancelar</string>
    <string name="cart_dialogTitle_addSimpleProduct">Adicionar Produto Temporario</string>

    <!-- Cart -->
...
    <string name="recipeAmount">Quantidade</string>

    <!-- Recipe -->
    <string name="form_title_ItemRecipeRegistration">Adicionar Ingrediente</string>
    <string name="imageDescription_form_recipe">Imagem padrão de uma receita</string>
    <string name="recipe_itemList_name"><b>%s</b> </string>
    <string name="recipe_itemList_price">Preço: %.2f R$</string>
    <!-- Recipe - ItemList -->
    <string name="recipe_itemList_ingredientCount">Numero de Ingredientes: %d</string>
    <string name="info_recipeDialog">INFO: Todos os ingredientes serão adicionados ao carrinho.</string>
    <string name="itemCart_toast_productAdded">Produto adicionado !</string>


    <!-- Others -->
    <string name="toast_product_update">Produto atualizado.</string>
    <string name="toast_produc_register">Produto Salvo !</string>
    <string name="swipe_remove">REMOVER</string>
    <string name="check">Confirmar</string>
    <string name="registration_recipe_selectIngredient">Selecionar Ingredientes</string>
    <string name="delete">Deletar</string>
    <string name="edit">Editar</string>
    <string name="imageDescription_productCategory">Icone da Categoria </string>
    <string name="produto">Produto</string>
    <string name="recipeIngredientsCount">Total de Ingredientes</string>
    <string name="recipePrice">Preço</string>
...
    <string name="snackbar_undo">DESFAZER</string>
    <string name="itemCart_toast_productAlreadyRegistered">Produto já esta cadastrado.</string>
    <string name="product_validation_name">Preencha o nome do produto.</string>
    <string name="validation_maxLenght">O numero de caracteres não deve ser superior a 25</string>
    <string name="product_validation_price">Campo obrigatório.</string>
    <string name="itemCart_validation_amount">Campo obrigatório.</string>
    <string name="validation_obrigatoryField">Campo obrigatório.</string>
    <string name="itemCart_validation_simpleItemAlreadyExists">Já existe um produto cadastrado com esse nome.</string>
    <string name="toast_recipe_alreadyRegistered">Receita já cadastrada.</string>
    <string name="recipe_validation_ingredients"> %s ( Obrigatório )</string>
    <string name="toast_itemStock_validRegistration">Produto Cadastrado !</string>
    <string name="toast_itemStock_invalidRegistration">O produto já está cadastrado.</string>
    <string name="itemCart_emptyList_title">Nenhum item cadastrado</string>
    <string name="itemCart_emptyList_description">Os itens adicionados ao carrinho serão exibidos aqui.</string>

    <!-- EmptyList -->
...
    <string name="emptyList_image_contentDescription">Imagem meramente ilustrativa</string>
    <string name="stock_emptyList_title">Nenhum item cadastrado</string>
    <string name="stock_emptyList_description">Os itens adicionados ao estoque serão exibidos aqui.</string>
    <string name="list_removedItems">%d items removidos.</string>
    <string name="list_oneRemovedItems">%d item removido.</string>
    <string name="itemCart_registration_products">Produtos</string>
    <string name="itemCart_registration_recipes">Receitas</string>
    <string name="itemCart_registration_save">Salvar</string>
    <string name="product_registration_title">Novo Produto</string>
    <string name="registration_product_price">Preço</string>
    <string name="registration_product_name">Nome</string>
    <string name="registration_product_categoryTitle">Categoria</string>
    <string name="registration_product_addStockTitle">Adicionar ao Estoque</string>
...
