<RelativeLayout android:id="@+id/recipe_view_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/recipe_emptyList"
        layout="@layout/empty_list"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_recipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_newRecipe"
            app:fabSize="normal"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:src="@drawable/ic_add"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:backgroundTint="@color/colorPrimaryDark"

            />

        <include
            android:id="@+id/recipe_management_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            layout="@layout/management_list"
            />

    </RelativeLayout>
