<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >



        <EditText
            android:id="@+id/form_itemRecipe_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/recipeAmount"
            android:inputType="number"/>

        <Spinner
        android:id="@+id/form_itemRecipe_products"
        android:layout_width="match_parent"
        android:layout_height="61dp"
            android:layout_marginTop="6dp"/>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>