<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/check"
        android:id="@+id/registration_save"
        app:showAsAction="always"
        android:icon="@drawable/ic_check"/>
</menu>